--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,32 @@ jobs:
       - run:
           name: "Say world"
           command: "echo World!"
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+  save-hello-world:
+    save-hello-world:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: circleci/node:13.8.0
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - run: echo "Hello World!" > ~/output.txt
+      - persist_to_workspace:
+          # Must be an absolute path, or relative path from working_directory. This is a directory on the container which is
+          # taken to be the root directory of the workspace.
+          root: ~/
+          # Must be relative path from root
+          paths: 
+           - output.txt
+  print-output-file:
+    print_output_file:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: cat ~/output.txt
+          
   print-env-variable:
     docker:
       - image: circleci/node:13.8.0
@@ -39,9 +63,16 @@ jobs:
      - run:
         name: "print env var"
         command: echo $MY_ENV_VAR
+
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   say-hello-workflow:
     jobs:
       - say-hello
       - say-world
       - print-env-variable
+      - save_hello_world_output
+      - print_output_file:
+          requires:
+            - save_hello_world_output
