--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,4 +75,4 @@ workflows:
       - save_hello_world
       - print_output_file:
           requires:
-            - save_hello_world_output
+            - save_hello_world
