--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,10 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-     - print_pipeline_id
+     - checkout
+     - run:
+        name: "print env var"
+        command: echo $MY_ENV_VAR
 
   
 
