--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ commands:
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 
 jobs:
-  print-pipeline-id:
+  print-pipeline:
     docker:
       - image: circleci/node:13.8.0
     steps:
@@ -84,7 +84,7 @@ workflows:
       - say-world
       - print-env-variable
       - save-hello-world
-      - print-pipeline-id
+      - print-pipeline
       - print-output-file:
           requires:
             - save-hello-world
