--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,9 @@ version: 2.1
 
 commands:
   print-pipeline-id:
+    parameters:
+      to:
+        type: array
     steps:
       -run:  echo ${CIRCLE_WORKFLOW_ID}
 
