--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,11 @@ version: 2.1
 
 commands:
   print-pipeline-id:
+    parameters:
+      id:
+        type: string
     steps:
-      -run:  echo ${CIRCLE_WORKFLOW_ID}
+      -run:  echo << parameters.id >>
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
@@ -15,7 +18,8 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - print-pipeline-id
+      - print-pipeline-id:
+        id: << pipeline.id >>
   # say-hello:
   #   # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
   #   # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
